--- a/day06/harib03e/Makefile
+++ b/day06/harib03e/Makefile
@@ -2,6 +2,7 @@ CFLAGS = -march=i486 -m32 -nostdlib -fno-pic -fno-builtin -fno-stack-protector
 OBJS = bootpack.c nasmfunc.o ../hankaku.c ../mysprintf.c dsctbl.c graphic.c int.c
 
 default :
+	make img
 	make clean
 
 %.bin : %.asm Makefile
@@ -13,17 +14,8 @@ ipl10.bin : ../ipl10.asm Makefile
 asmhead.bin : ../asmhead.asm Makefile
 	nasm ../asmhead.asm -o asmhead.bin -l asmhead.lst
 
-# %.o : %.asm Makefile
-# 	nasm -g -f -elg $*.asm -o $*.o
-
 nasmfunc.o : ../nasmfunc.asm Makefile
 	nasm -g -f elf ../nasmfunc.asm -o nasmfunc.o
-
-mysprintf.o: mysprintf.c
-	gcc -c $(CFLAGS) -o mysprintf.o mysprintf.c
-
-%.o : %.c Makefile
-	gcc -c $(CFLAGS) -o $*.o $*.c
 
 bootpack.hrb : ../har.ld $(OBJS) Makefile
 	gcc $(CFLAGS) -T ../har.ld $(OBJS) -o bootpack.hrb
@@ -43,5 +35,4 @@ img :
 	make -r haribote.img
 
 clean :
-	make -r haribote.img
 	rm *.bin *.lst *.hrb *.sys *.o
