--- a/day22/harib19g/Makefile
+++ b/day22/harib19g/Makefile
@@ -1,15 +1,15 @@
 CFLAGS = -march=i486 -m32 -nostdlib -fno-pic -fno-builtin
-OBJS = bootpack.c nasmfunc.o ../lib/hankaku.c ../lib/mysprintf.c ../lib/dsctbl.c \
+OBJS = bootpack.c nasmfunc.o ../lib/hankaku.c ../lib/mysprintf.c dsctbl.c \
 ../lib/graphic.c ../lib/int.c ../lib/fifo.c ../lib/keyboard.c ../lib/mouse.c \
-../lib/memory.c ../lib/sheet.c ../lib/timer.c ../lib/mtask.c \
+../lib/memory.c ../lib/sheet.c ../lib/timer.c mtask.c \
 ../lib/window.c console.c ../lib/file.c ../lib/stdlib.c
 OSNAME   = helloOS
 IMGNAME  = ../../haribote.img
 VBOX     = /mnt/c/Program\ Files/Oracle/VirtualBox/VBoxManage.exe
 NASMFILE = nasmfunc.asm
 INCLUDE := bootpack.c
-ASMAPPS := hello.asm hello2.asm crack2.asm crack3.asm crack4.asm crack5.asm crack6.asm
-CAPPS := a.c hello3.c crack1.c
+ASMAPPS := hello5.asm
+CAPPS := a.c hello4.c winhelo.c winhelo2.c
 APPS := $(patsubst %.asm,%.hrb,$(ASMAPPS)) $(patsubst %.c,%.hrb,$(CAPPS)) $(INCLUDE)
 # 別のディレクトリのソース達をもってくる
 VPATH = src:../app/ src:../
@@ -35,8 +35,9 @@ default :
 	ld -m elf_i386 -o $@ --oformat=binary -e __start -T ../app.ls a_asm.o $*.o
 
 # ASMで書いたAppをつくる
-%.hrb: %.asm Makefile
-	nasm $< -o $@
+%.hrb: %.asm a_asm.o ../app.ls Makefile
+	nasm -g -f elf $< -o $*.o
+	ld -m elf_i386 -o $@ --oformat=binary -e __start -T ../app.ls a_asm.o $*.o
 
 bootpack.hrb : ../har.ld $(OBJS) Makefile
 	gcc $(CFLAGS) -T ../har.ld $(OBJS) -o bootpack.hrb
